--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,10 @@
-body {
+$primary-color: #4cc9f0;
+
+@mixin border-radius-10 {
+  border-radius: 10px;
+}
+
+html, body {
   overflow-x: hidden;
 }
 
@@ -8,12 +14,14 @@ body {
 }
 
 ::-webkit-scrollbar-track {
+  @include border-radius-10;
+
   box-shadow: inset 0 0 5px gray;
-  border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #4cc9f0;
-  border-radius: 10px;
+  @include border-radius-10;
+
+  background-color: $primary-color;
 }
 
 .height-100-p {
@@ -21,7 +29,7 @@ body {
 }
 
 .color-bg-primary {
-  background-color: #4cc9f0;
+  background-color: $primary-color;
 }
 
 .opacity-8 {
@@ -35,6 +43,13 @@ body {
   }
 }
 
+.scale-1 {
+  &:hover{
+    overflow-x: hidden;
+    transform: scale(1.1, 1.1);
+  }
+}
+
 .transform-delay-4 {
   transition: transform 4s;
 }
@@ -43,6 +58,18 @@ body {
   padding: 0 15%;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
+.padding-y-100 {
+  padding: 100px 20px;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.max-width {
+  max-width: 2640px;
+}
+
+.white-color {
+  color: white;
 }
