--- a/src/stylesheets/LowerCarousel.scss
+++ b/src/stylesheets/LowerCarousel.scss
@@ -1,6 +1,6 @@
 .carousel {
   .carousel-control-prev, .carousel-control-next {
-    background: #4cc9f0;
+    background: #adb5bd;
     width: 75px;
     height: 120px;
     opacity: 1;
