--- a/src/stylesheets/layered-card.module.scss
+++ b/src/stylesheets/layered-card.module.scss
@@ -4,7 +4,7 @@
   .card-text-box {
     position: absolute;
     top: 0;
-    padding-top: 40%;
+    padding: 40% 20px 0 20px;
     width: 100%;
     height: 100%;
     text-align: center;
